@@ -5,21 +5,22 @@ import com.willyoubackend.domain.dating.entity.Dating;
 import com.willyoubackend.domain.dating.repository.DatingRepository;
 import com.willyoubackend.domain.user.entity.UserEntity;
 import com.willyoubackend.domain.user.repository.UserRepository;
+import com.willyoubackend.domain.user_like_match.entity.UserMatchStatus;
 import com.willyoubackend.domain.user_like_match.repository.UserLikeStatusRepository;
+import com.willyoubackend.domain.user_like_match.repository.UserMatchStatusRepository;
 import com.willyoubackend.domain.user_like_match.repository.UserNopeStatusRepository;
-import com.willyoubackend.domain.user_profile.dto.SetMainDatingRequestDto;
-import com.willyoubackend.domain.user_profile.dto.UserOwnProfileResponseDto;
-import com.willyoubackend.domain.user_profile.dto.UserProfileRequestDto;
-import com.willyoubackend.domain.user_profile.dto.UserProfileResponseDto;
+import com.willyoubackend.domain.user_profile.dto.*;
 import com.willyoubackend.domain.user_profile.entity.GenderEnum;
-import com.willyoubackend.domain.user_profile.entity.LocationEnum;
+import com.willyoubackend.domain.user_profile.entity.ProfileImageEntity;
 import com.willyoubackend.domain.user_profile.entity.UserProfileEntity;
 import com.willyoubackend.domain.user_profile.entity.UserRecommendations;
+import com.willyoubackend.domain.user_profile.repository.ProfileImageRepository;
 import com.willyoubackend.domain.user_profile.repository.UserProfileRepository;
 import com.willyoubackend.domain.user_profile.repository.UserRecommendationsRepository;
 import com.willyoubackend.global.dto.ApiResponse;
 import com.willyoubackend.global.exception.CustomException;
 import com.willyoubackend.global.exception.ErrorCode;
+import com.willyoubackend.global.util.AuthorizationUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
@@ -30,6 +31,7 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -42,8 +44,10 @@ public class UserProfileService {
     private final UserRecommendationsRepository userRecommendationsRepository;
     private final UserLikeStatusRepository userLikeStatusRepository;
     private final UserNopeStatusRepository userNopeStatusRepository;
+    private final ProfileImageRepository profileImageRepository;
+    private final UserMatchStatusRepository userMatchStatusRepository;
 
-    public ResponseEntity<ApiResponse<UserProfileResponseDto>> updateUserProfile(UserEntity userEntity, UserProfileRequestDto userProfileRequestDto) {
+    public UserProfileResponseDto updateUserProfile(UserEntity requestingUser, Long userId, UserProfileRequestDto userProfileRequestDto) {
 
         if (userProfileRequestDto.getNickname() == null || userProfileRequestDto.getNickname().isEmpty()) {
             throw new CustomException(ErrorCode.INVALID_NICKNAME);
@@ -53,24 +57,21 @@ public class UserProfileService {
             throw new CustomException(ErrorCode.INVALID_GENDER);
         }
 
-        UserEntity loggedInUser = findUserById(userEntity.getId());
-
-        UserProfileEntity userProfileEntity = userEntity.getUserProfileEntity();
-
-        userProfileEntity.setUserEntity(loggedInUser);
+        if (!requestingUser.getId().equals(userId) && !AuthorizationUtils.isAdmin(requestingUser)) {
+            throw new CustomException(ErrorCode.NOT_AUTHORIZED);
+        }
+        UserEntity userToUpdate = findUserById(userId);
+        UserProfileEntity userProfileEntity = userToUpdate.getUserProfileEntity();
         userProfileEntity.updateProfile(userProfileRequestDto);
-        userProfileEntity.setUserActiveStatus(true);
-
+        List<ProfileImageEntity> profileImageEntities = profileImageRepository.findAllByUserEntity(userToUpdate);
+        userProfileEntity.setUserActiveStatus(!profileImageEntities.isEmpty());
         userProfileRepository.save(userProfileEntity);
-
-        UserProfileResponseDto userProfileResponseDto = new UserProfileResponseDto(loggedInUser);
-
-        return ResponseEntity.status(HttpStatus.OK).body(ApiResponse.successData(userProfileResponseDto));
+        return new UserProfileResponseDto(userToUpdate);
     }
 
     public ResponseEntity<ApiResponse<List<UserProfileResponseDto>>> getRecommendations(UserEntity userEntity) {
 
-        LocationEnum location = userEntity.getUserProfileEntity().getLocation();
+        String location = userEntity.getUserProfileEntity().getLocation();
         GenderEnum gender = userEntity.getUserProfileEntity().getGender();
 
         List<UserProfileResponseDto> userProfileResponseDtoList = new ArrayList<>();
@@ -81,15 +82,15 @@ public class UserProfileService {
             filteredUsers = userRepository.findByUserProfileEntity_LocationAndIdNot(location, userEntity.getId());
         }
         int maxLimit = 0;
-        for (UserEntity filteredUser: filteredUsers) {
+        for (UserEntity filteredUser : filteredUsers) {
             if (maxLimit == 100) break;
-            log.info(userNopeStatusRepository.existBySentUserAndReceivedUser(userEntity,filteredUser) + "");
-            if (!userNopeStatusRepository.existBySentUserAndReceivedUser(userEntity,filteredUser) &&
-                    !userLikeStatusRepository.existBySentUserAndReceivedUser(userEntity,filteredUser) &&
+            log.info(userNopeStatusRepository.existBySentUserAndReceivedUser(userEntity, filteredUser) + "");
+            if (!userNopeStatusRepository.existBySentUserAndReceivedUser(userEntity, filteredUser) &&
+                    !userLikeStatusRepository.existBySentUserAndReceivedUser(userEntity, filteredUser) &&
                     filteredUser.getUserProfileEntity().isUserActiveStatus()) {
                 userProfileResponseDtoList.add(new UserProfileResponseDto(filteredUser));
             }
-            maxLimit ++;
+            maxLimit++;
         }
 
         return ResponseEntity.status(HttpStatus.OK).body(ApiResponse.successData(userProfileResponseDtoList));
@@ -99,13 +100,24 @@ public class UserProfileService {
         List<DatingResponseDto> datingList = datingRepository.findAllByUser(userEntity)
                 .stream()
                 .map(DatingResponseDto::new)
-                .toList();
-        UserOwnProfileResponseDto userProfileResponseDto = new UserOwnProfileResponseDto(findUserById(userEntity.getId()),datingList);
+                .collect(Collectors.toList());
+        boolean isNew = userEntity.getUserProfileEntity().isNew();
+        boolean userActiveStatus = userEntity.getUserProfileEntity().isUserActiveStatus();
+        UserOwnProfileResponseDto userProfileResponseDto =
+                new UserOwnProfileResponseDto(
+                        userEntity,
+                        datingList,
+                        isNew,
+                        userActiveStatus
+                );
         return ResponseEntity.status(HttpStatus.OK).body(ApiResponse.successData(userProfileResponseDto));
     }
 
-    public ResponseEntity<ApiResponse<UserProfileResponseDto>> getUserProfile(Long userId) {
-        UserProfileResponseDto userProfileResponseDto = new UserProfileResponseDto(findUserById(userId));
+
+    public ResponseEntity<ApiResponse<UserProfileMatchResponseDto>> getUserProfile(UserEntity user, Long userId) {
+        UserMatchStatus matchStatus = (userMatchStatusRepository.findByUserMatchedOneAndUserMatchedTwo(user, findUserById(userId)) == null) ? userMatchStatusRepository.findByUserMatchedOneAndUserMatchedTwo(findUserById(userId), user) : userMatchStatusRepository.findByUserMatchedOneAndUserMatchedTwo(user, findUserById(userId));
+        Long matchId =(matchStatus == null)?null:matchStatus.getId();
+        UserProfileMatchResponseDto userProfileResponseDto = new UserProfileMatchResponseDto(findUserById(userId), matchId);
         return ResponseEntity.status(HttpStatus.OK).body(ApiResponse.successData(userProfileResponseDto));
     }
 
@@ -153,7 +165,7 @@ public class UserProfileService {
     // 보류
     // 보류 이유: 굳이 Redis를 사용할 필요가 없어서
     public ResponseEntity<ApiResponse<List<UserProfileResponseDto>>> getRecommendationsTemp(UserEntity userEntity) {
-        LocationEnum location = userEntity.getUserProfileEntity().getLocation();
+        String location = userEntity.getUserProfileEntity().getLocation();
         GenderEnum gender = userEntity.getUserProfileEntity().getGender();
         UserRecommendations recommendations = userRecommendationsRepository.findByUsername(userEntity.getUsername());
         if (recommendations == null) {
@@ -166,8 +178,8 @@ public class UserProfileService {
 
             }
             for (UserEntity filteredUser : filteredUsers) {
-                if (!userNopeStatusRepository.existBySentUserAndReceivedUser(userEntity,filteredUser) &&
-                        !userLikeStatusRepository.existBySentUserAndReceivedUser(userEntity,filteredUser)) {
+                if (!userNopeStatusRepository.existBySentUserAndReceivedUser(userEntity, filteredUser) &&
+                        !userLikeStatusRepository.existBySentUserAndReceivedUser(userEntity, filteredUser)) {
                     userProfileResponseDtoList.add(new UserProfileResponseDto(filteredUser));
                 }
             }
@@ -192,4 +204,19 @@ public class UserProfileService {
 //        }
 //        return age;
 //    }
+
+    public void deactivateUser(Long userId) {
+        UserProfileEntity userProfile = userProfileRepository.findById(userId)
+                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+        userProfile.setUserActiveStatus(false);
+        userProfileRepository.save(userProfile);
+    }
+
+    public void activateUserStatusByUsername(String username) {
+        UserEntity userEntity = userRepository.findByUsername(username)
+                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+        UserProfileEntity userProfileEntity = userProfileRepository.findByUserEntity(userEntity);
+        userProfileEntity.setUserActiveStatus(true);
+        userProfileRepository.save(userProfileEntity);
+    }
 }
